use StringUtils.isBlank + isNotBlank