@@ -26,6 +26,7 @@ import java.util.logging.Logger;
 import com.apicatalog.jsonld.JsonLdError;
 import com.apicatalog.jsonld.JsonLdErrorCode;
 import com.apicatalog.jsonld.JsonLdVersion;
+import com.apicatalog.jsonld.StringUtils;
 import com.apicatalog.jsonld.json.JsonUtils;
 import com.apicatalog.jsonld.lang.BlankNode;
 import com.apicatalog.jsonld.lang.CompactUri;
@@ -105,7 +106,7 @@ public final class TermDefinitionBuilder {
 
     public void create(final String term) throws JsonLdError {
 
-        if (term.isBlank()) {
+        if (StringUtils.isBlank(term)) {
             throw new JsonLdError(JsonLdErrorCode.INVALID_TERM_DEFINITION);
         }
 
